# MetaCoding

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  article-text.txt  package.json  tsconfig.json
ctkr/: .gitignore  README.md  pyproject.toml
ctkr/ctkr/: __init__.py  __main__.py  boundary_quality.py  cards.py  centrality.py  cli.py  decisions.py  drupal.py  embed.py  evidence.py  farmos_diff.py  feature_join.py  feature_kinds.py  graph_loader.py  hom_profiles.py  inflight.py  intent_cm.py  intention.py  intention_synth.py  interfaces.py  label_motifs.py  label_roles.py  lexicon.py  llm.py  mine_fixtures.py  motif_mining.py  nn_index.py  operads.py  port_brief.py  presentations.py  propose_adapter.py  propose_terms.py  restructure.py  role_gaps.py  schema.py  schema_l3.py  shape.py  spec_cards.py  subsystems.py  term_codegen.py  (+1 more)
ctkr/scripts/: README.md  emit_json_schema.py  label_roles_via_claude_cli.py
ctkr/tests/: test_add_term.py  test_boundary_quality.py  test_cards.py  test_centrality.py  test_cli.py  test_decisions.py  test_drupal.py  test_embed.py  test_entropy_check.py  test_equipment_log_field.py  test_evidence.py  test_farmos_diff.py  test_feature_join.py  test_feature_kinds.py  test_fixture_reproducibility.py  test_flow_write_surface.py  test_framework_implied_cm.py  test_glossary_gaps.py  test_go_membership_pack.py  test_graph_loader.py  test_hom_profiles.py  test_inflight.py  test_intent_cm.py  test_intent_cm_coupling.py  test_intention.py  test_intention_synth.py  test_interfaces.py  test_label_motifs.py  test_label_roles.py  test_llm.py  test_llm_gpt56.py  test_llm_scratch.py  test_marginal_entropy.py  test_mine_fixtures.py  test_motif_mining.py  test_nn_index.py  test_operads.py  test_oracle_distiller.py  test_oracle_fixtures.py  test_oracle_flow_bridge.py  (+40 more)
eval/ctkr/: README.md  calibration.parquet  calibration_ingest.py  calibration_report.py  calibration_schema.py  functor_eval.ts  (+11 more)
(+452 files in other folders)
