[project]
name = "ctkr"
version = "0.0.1"
description = "Categorical-Theoretic Knowledge Representation — graph mining + LLM enrichment over the MetaCoding code graph"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "dorje" }]
dependencies = [
    "networkx>=3.3",
    "scipy>=1.13",
    "pyarrow>=17",
    "polars>=1.10",
    "pydantic>=2.8",
    "anthropic>=0.101.0",
    "openai>=2.36.0",
    "hnswlib>=0.8.0",
    "blake3>=0.4",
]

[project.scripts]
ctkr = "ctkr.cli:main"

[project.optional-dependencies]
# Heavier deps belong to specific issues that pull them in.
embed = ["gensim>=4.3"]          # node2vec — Orchestrators-7u7
topo  = ["gudhi>=3.10"]           # persistent homology — Orchestrators-vbj
gnn   = ["torch-geometric>=2.6"]  # GraphSAGE — Orchestrators-7u7 stretch

[dependency-groups]
dev = [
    "kuzu>=0.11.3",
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctkr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
